@@ -46,10 +46,6 @@ define( function( require ) {
       moleculeCountVisible: false
     } );
 
-    // Parent for all nodes added to this screen
-    var rootNode = new Node();
-    thisView.addChild( rootNode );
-
     // beaker
     var beakerNode = new BeakerNode( model.beaker, mvt );
     var solutionNode = new SolutionNode( model.solution, model.beaker, mvt );
@@ -99,26 +95,30 @@ define( function( require ) {
       viewProperties.reset();
     } );
 
-    // Rendering order
-    rootNode.addChild( waterFluidNode );
-    rootNode.addChild( waterFaucetNode );
-    rootNode.addChild( drainFluidNode );
-    rootNode.addChild( drainFaucetNode );
-    rootNode.addChild( dropperFluidNode );
-    rootNode.addChild( dropperNode );
-    rootNode.addChild( solutionNode );
-    rootNode.addChild( ratioNode );
-    rootNode.addChild( beakerNode );
-    rootNode.addChild( moleculeCountNode );
-    rootNode.addChild( volumeIndicatorNode );
-    rootNode.addChild( beakerControls );
-    rootNode.addChild( pHMeterNode );
-    rootNode.addChild( graphNode );
-    rootNode.addChild( resetAllButton );
-    rootNode.addChild( soluteComboBox );
-    rootNode.addChild( soluteListParent ); // last, so that combo box list is on top
+    // Parent for all nodes added to this screen
+    var rootNode = new Node( { children: [
+      // nodes are rendered in this order
+      waterFluidNode,
+      waterFaucetNode,
+      drainFluidNode,
+      drainFaucetNode,
+      dropperFluidNode,
+      dropperNode,
+      solutionNode,
+      ratioNode,
+      beakerNode,
+      moleculeCountNode,
+      volumeIndicatorNode,
+      beakerControls,
+      pHMeterNode,
+      graphNode,
+      resetAllButton,
+      soluteComboBox,
+      soluteListParent // last, so that combo box list is on top
+    ] } );
+    thisView.addChild( rootNode );
 
-    // Layout
+    // Layout of nodes that don't have a location specified in the model
     moleculeCountNode.centerX = mvt.modelToViewX( model.beaker.location.x );
     moleculeCountNode.bottom = beakerNode.bottom - 25;
     beakerControls.centerX = mvt.modelToViewX( model.beaker.location.x );
